[package]
name = "rust_microservice"
version = "0.1.0"
authors = ["Chanaka Fernando <chanaka.leadership@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.5.3"
futures = "0.1.17"
hyper = "0.11.13"
log = "0.4.1"
